--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,10 @@ transformers==4.14.1
 torch==2.0.0
 pandas==2.0.0
 torchaudio==2.0.1
-transformers==4.14.1
+
+# formatting
+flake8==4.0.1
+black[jupyter]==22.3.0
+isort==5.9.3
+pre-commit==2.16.0
 
